Bug 516924 - Don't pass our ChildViews to drawWithFrame:inView: when drawing NSCells (e.g. buttons) because that causes Cocoa to think our views have focus rings, so it starts repainting unnecessarily when we invalidate rects near the view boundaries. r=josh